# store

./: .env.example  .gitignore  INSTRUCTION.md  README.md  frontend_refactoring.md  index.html  main.py  pyproject.toml  second_iteration.md  styles.css
app/: __init__.py  cart.py  config.py  db.py  i18n.py  models.py  routes.py  seed.py
app/notifications/: __init__.py  telegram.py
app/payments/: __init__.py  base.py  fake_yookassa.py  manual.py  yookassa.py
app/templates/: base.html  cart.html  checkout.html  dev_fake_payment.html  dev_orders.html  index.html  order_success.html  product_detail.html  track_order.html
codex_skills/plan-review/: SKILL.md
codex_skills/planning/: SKILL.md
codex_tasks/codex_log/: E2E_tests_plan.md_log  orders_identity.md_log  unit_transaction_coverage_plan.md_log
codex_tasks/completed_tasks/: E2E_tests_plan.md  codex_plans_log.md  dev_server_full_flow_plan.md  frontend_hero_card_color_refactor.md  frontend_stock_localization_dark_lake_plan.md  orders_identity.md  (+2 more)
fragments/: palette-warm-natural.html
media/: image_cropper.py
scripts/: db_cli.py  db_sqlite3.py  dev_server.py  normalize_product_images.py  reset_dev_db.py
static/: styles.css
tests/: conftest.py  test_cart.py  test_catalog.py  test_checkout_manual.py  test_checkout_routes.py  test_db_schema.py  test_dev_fake_payments.py  test_env_config.py  test_i18n.py  test_models_orders.py  test_models_stock.py  test_order_tracking.py  test_payment_routes.py  test_telegram_notifications.py  test_telegram_shipping.py  test_yookassa_provider.py  test_yookassa_routes.py
(+7 files in other folders)
